Implemented first version of session/init endpoint.
