# api/openapi.yaml
@@ -14,6 +14,8 @@ tags:
     description: Requests related to recipe details.
   - name: Search
     description: Requests related with searching for items, recipes etc.
+  - name: Session
+    description: Requests related to the session handling.
   - name: Sidebar
     description: Requests related to the sidebar of the browser.
   - name: Style
@@ -108,6 +110,20 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/SearchResultData"
+
+  /session/init:
+    get:
+      summary: Initializes the session.
+      operationId: session.init
+      tags:
+        - Session
+      responses:
+        200:
+          description: The initial settings of the session.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SessionInitData"
 
   /sidebar/entities:
     post:
@@ -418,6 +434,16 @@ components:
           type: integer
           description: The total number of search results.
           example: 42
+
+    SessionInitData:
+      type: object
+      description: The data to initialize the session.
+      properties:
+        sidebarEntities:
+          type: array
+          description: The sidebar entities of the session.
+          items:
+            $ref: "#/components/schemas/SidebarEntityData"
 
     SidebarEntityData:
       type: object
