# src/Constant/RouteName.php
@@ -38,6 +38,11 @@ interface RouteName
     public const SEARCH = 'search';
 
     /**
+     * The route for initializing the session.
+     */
+    public const SESSION_INIT = 'session.init';
+
+    /**
      * The route for sending the sidebar entities to the server.
      */
     public const SIDEBAR_ENTITIES = 'sidebar.entities';
