# src/Mapper/SidebarEntityMapper.php
@@ -4,40 +4,34 @@ declare(strict_types=1);
 
 namespace FactorioItemBrowser\PortalApi\Server\Mapper;
 
-use BluePsyduck\MapperManager\Mapper\StaticMapperInterface;
+use BluePsyduck\MapperManager\Mapper\DynamicMapperInterface;
 use FactorioItemBrowser\PortalApi\Server\Entity\SidebarEntity;
 use FactorioItemBrowser\PortalApi\Server\Transfer\SidebarEntityData;
 
 /**
- * The mapper of the sidebar entity data, mapping to database entities.
+ * The mapper of the sidebar entities.
  *
  * @author BluePsyduck <bluepsyduck@gmx.com>
  * @license http://opensource.org/licenses/GPL-3.0 GPL v3
  */
-class SidebarEntityDataMapper implements StaticMapperInterface
+class SidebarEntityMapper implements DynamicMapperInterface
 {
     /**
-     * Returns the source class supported by this mapper.
-     * @return string
+     * Returns whether the mapper supports the combination of source and destination object.
+     * @param object $source
+     * @param object $destination
+     * @return bool
      */
-    public function getSupportedSourceClass(): string
+    public function supports($source, $destination): bool
     {
-        return SidebarEntityData::class;
-    }
-
-    /**
-     * Returns the destination class supported by this mapper.
-     * @return string
-     */
-    public function getSupportedDestinationClass(): string
-    {
-        return SidebarEntity::class;
+        return ($source instanceof SidebarEntity || $source instanceof SidebarEntityData)
+            && ($destination instanceof SidebarEntity || $destination instanceof SidebarEntityData);
     }
 
     /**
      * Maps the source object to the destination one.
-     * @param SidebarEntityData $source
-     * @param SidebarEntity $destination
+     * @param SidebarEntity|SidebarEntityData $source
+     * @param SidebarEntity|SidebarEntityData $destination
      */
     public function map($source, $destination): void
     {
